--- a/local_rmd_nbooks/m2_strain_decon_all.Rmd
+++ b/local_rmd_nbooks/m2_strain_decon_all.Rmd
@@ -24,7 +24,7 @@ suppressPackageStartupMessages({
   library(cowplot)
   library(pheatmap)
   library(rmarkdown)
-  library('vcfR')
+  # library('vcfR')
   library(conflicted)
   library(RColorBrewer)
   library(MetBrewer)
@@ -33,11 +33,11 @@ suppressPackageStartupMessages({
   library(ggrepel)
   library(ggvenn)
   library(magick)
-  library(svglite)
+  # library(svglite)
   library(plotly)
   library(ggsankey)
-  library(gganimate)
-  library(av)
+  # library(gganimate)
+  # library(av)
   
   conflict_prefer("select", "dplyr")
   conflict_prefer("count", "dplyr")
@@ -53,88 +53,17 @@ suppressPackageStartupMessages({
 
 ## Variable declarations
 
+### Common functions
+
+#### Source commong functions, varriables and tables
 ```{r}
-##good coours 
-# "#6eb5ff", "#f4a261"
-##Strain cluster colours
-strain_cols <- c(met.brewer(name = 'Austria')[c(1,7, 4,5,6)], 'light gray')
+##Boxplot labeling function
+source("/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/seurat_sce/seu_sce_common_fns.R")
+source("/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/multipurpose_scripts/plotting_common_fns.R")
+source("/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/mali22_code/pf_common_vars.R")
+```
 
-# strain_cols_n <-c("#910000", "#f20000", "#007c71", "#00f2dd", "#c39a00", "#ffd94d", "#7570B3","#708db3", "#9770b3", "#C9E0F1", "#a40000" , "#00b7a7", "#ffcd12","#a40000" , "#00b7a7", "#ffcd12", 'black', 'lavender', 'lightgray', 'grey')
-# names(strain_cols_n) <- c('SC2', 'SC1','SC4',  'SC3', 'SC6',  'SC5', 'SC7', 'S2_S3', 'S3_S1', 'S1_p_i','S1_b', 'S2_b', 'S3_b', 'S1', 'S2', 'S3', 'Doublet', 'SC1_3i','Negative',  'Less5')
-# "#aeaa61" "#c695c9"
-
-strain_cols_n <-c("#910000", "#ff1a8d", "#007c71", "#0ea300", "#00deca", "#9a96c7", "#5d57a4", "#a8875b","#708db3", "#c39a00", "#ffd94d", "#9770b3", "#C9E0F1", "#a40000" , "#00b7a7", "#ffcd12","thistle","#a40000" , "#00b7a7", "#e7f1f9", 'black', '#050301','grey')
-#, 'lavender', 'lightgray', 'grey'
-names(strain_cols_n) <- c('SC2', 'SC1','SC5',  'SC4', 'SC3',  'SC6', 'SC7', 'SC8', 'SC9', 'SC10', 'SC11', 'SC12', 'S3_b', 'S1', 'S2', 'S3', 'Doublet', 'SC1_3i','Negative', 'Lab', 'Less5', 'PoorQC', NA)
-
-strain_cols_fh <-c("#910000", "#007c71", "#5d57a4", "lightgray")
-#, 'lavender', 'lightgray', 'grey'
-names(strain_cols_fh) <- c('SC2', 'SC5', 'SC7', 'Other')
-
-strain_cols_nl <-c("#910000", "#f20000", "#007c71", "#00f2dd", "#c39a00", "#ffd94d", "#7570B3","#708db3", "#9770b3", "#C9E0F1", "#a40000" , "#00b7a7", "#thistle","#a40000" , "#00b7a7", "#ffcd12", 'black', 'lavender', 'lightgray', 'grey')
-names(strain_cols_nl) <- c('SC1b', 'SC1a', 'SC2b',  'SC2a', 'SC3b',  'SC3a', 'S2_S1', 'S2_S3', 'S3_S1', 'S1_pa','S1_b', 'S2_b', 'S3_b', 'S1', 'S2', 'S3', 'Doublet', 'S1_3i','Negative',  'Less5')
-
-sp_colors <- c('Early ring'='#D1EC9F',
-                     'Late ring'='#78C679',
-                     'Early trophozoite'='#FEEEAA',
-                     'Late trophozoite'='#FEB24C',
-                     'Early schizont'='#C9E8F1',
-                     'Late schizont'='#85B1D3',
-                     'Gametocyte (developing)'='thistle',
-                     'Gametocyte (female)'='#551A8B',
-                     'Gametocyte (male)'='mediumpurple',
-               'Unassigned'='red', 
-               'Not assigned'='#D6CFC7',
-               'Female (LE)'='#208cf7',
-               'Female (HE)'='#551A8B',
-               'Male (LE)'='#a894d1',
-               'Male (HE)'='mediumpurple',
-               'Failed QC' = 'grey',
-               'Gametocyte (committed)' = '#C399A2', 
-               'Gametocyte (developing)' = '#66444C', 
-               'Gametocyte (branching)' = '#66444C', 
-               'Gametocyte (early female)' = '#749E89', 
-               'Gametocyte (early male)' = '#7D87B2', 
-               'Gametocyte (late female)' = '#4E6D58', 
-               'Gametocyte (late male)' = '#41507B',
-                   NULL = 'lightgrey'
-)
-
-
-sp_fld_colors <- c('Late ring'= '#78C679',#met.brewer('Java')[2],
-                   'Early trophozoite'='#FEEEAA',#met.brewer('Java')[3],
-                   'Female (LE)'= met.brewer('Ingres')[5],
-                   'Female'= '#551A8B', #met.brewer('Ingres')[7],
-                   # 'Female (HE)'= '#551A8B', #met.brewer('Ingres')[7],
-                   # 'Male (LE)'=met.brewer('Nizami')[6],
-                   # 'Male (HE)'=met.brewer('Nizami')[8],
-                   # 'Gametocyte (male)'=met.brewer('Austria')[5],
-                   'Male (LE)'=met.brewer('Ingres')[7],#'#a2e19e',
-                   'Male'= 'mediumpurple',#'#039911',
-                   ## 'Male (HE)'= 'mediumpurple',#'#039911',
-                   'Gametocyte (male)'='#3DED97',
-                   'Gametocyte (female)'=met.brewer('Ingres')[6],
-                   'Lab' = '#D3D3D3',
-                   'Unassigned'='#DCDCDC',
-                   'Failed QC' = 'grey',
-                   'Not assigned' = 'grey',
-                   'Atlas' = 'grey',
-                   'Early ring'='#D1EC9F',
-                     'Late trophozoite'='#FEB24C',
-                     'Early schizont'='#C9E8F1',
-                     'Late schizont'='#85B1D3',
-                   'Gametocyte (developing)'='thistle',
-                   'early female' = '#749E89',
-                   'late female'= '#4E6D58',
-                    "Asexual" = "#FBC81D",
-                   NULL = 'lightgrey'
-)
-
-c_stg_shapes = c('Asexual' = 16 , 'Male' = 3,  'Female' = 6)
-c_stg_cols= c('Asexual' = "#D7B7C7", 'Male' = "#C4CAA4", 'Female'="#6289A9", 'Developing' = "#C9F6E1", 'Unassigned'="lightgrey")
-
-stg_refnd_lvls = c("Early ring", "Late ring", "Early trophozoite", "Late trophozoite", "Early schizont", "Late schizont", "Gametocyte (committed)", "Gametocyte (developing)", "Gametocyte (branching)", "Female (HE)", "Female (LE)", "Gametocyte (female)", "Gametocyte (early female)", "Gametocyte (late female)", "Gametocyte (male)", "Male (HE)", "Male (LE)", "Gametocyte (early male)", "Gametocyte (late male)", "Unassigned", "Failed qc", "Not assigned", "Atlas", "stgQC_fail")
-
+```{r}
 sample_set = 'Mali2'
 algn_nm = 'minmap'
 
@@ -148,7 +77,7 @@ strain_levels_univrs <- c(paste0("SC", 1:20), "Doublet", "Negative")
 ```
 
 ```{r setup}
-knitr::opts_knit$set(root.dir = '/Users/jr35/Google Drive/My Drive/PHD_documents/malaria_phd/Mali2/')
+knitr::opts_knit$set(root.dir = '/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/')
 ```
 
 
@@ -161,7 +90,7 @@ knitr::opts_knit$set(root.dir = '/Users/jr35/Google Drive/My Drive/PHD_documents
 ##Sample ID
 # sample_name_nms <- c("MSC33", "MSC48","MSC49", "MSC55", "MSC60", "MSC66") %>% sort()
 ## All sample ids removing "MSC38" which seems to have lots of doublets
-sample_name_nms <- c("MSC33", "MSC48","MSC49", "MSC55", "MSC60", "MSC66", "MSC40", "MSC50_MACS", "MSC53", "MSC57", "MSC24", "MSC37", "MSC39", "MSC45", "MSC50_SLO", "MSC54", "MSC67", "MSC68", "MSC70")
+sample_name_nms <- c("MSC33", "MSC48","MSC49", "MSC55", "MSC60", "MSC66", "MSC38", "MSC40", "MSC50_MACS", "MSC53", "MSC57", "MSC24", "MSC37", "MSC39", "MSC45", "MSC50_SLO", "MSC54", "MSC67", "MSC68", "MSC70")
 
 # sample_name_nms <- c("MSC33", "MSC48","MSC49", "MSC55", "MSC60") %>% sort()
 algn_nms = c('minmap', 'hsat', 'lr_ref')
@@ -177,7 +106,7 @@ sm_aln_nms_al <- paste(rep(sample_name_nms, length(algn_nms)), rep(algn_nms, eac
 # opt_clusters_nms <- list("MSC33" = c(6:10),"MSC48" = c(3:7),"MSC49" = c(5:9),"MSC55" = c(4:8),"MSC60" = c(5:9), "MSC66" = c(7:11), "MSC38" = c(2:6), "MSC40" = c(6:10), "MSC50_MACS" = c(2:6), "MSC53" = c(2:6), "MSC57" = c(2:6))
 
 # opt_clusters_nms <- list("MSC33" = c(6:10),"MSC48" = c(3:7),"MSC49" = c(5:9),"MSC55" = c(4:8),"MSC60" = c(5:9), "MSC66" = c(7:11), "MSC40" = c(6:10), "MSC50_MACS" = c(2:6), "MSC53" = c(2:6), "MSC57" = c(2:6), "MSC24" = c(2:6), "MSC37" = c(5:9), "MSC39" = c(3:7), "MSC45" = c(2:6), "MSC50_SLO" = c(2:6), "MSC54" = c(2:6), "MSC67" = c(2:6), "MSC68" = c(2:6), "MSC70" = c(2:6))
-opt_clusters_nms <- list("MSC33" = c(6:10),"MSC48" = c(3:7),"MSC49" = c(5:9),"MSC55" = c(4:8),"MSC60" = c(5:9), "MSC66" = c(7:11), "MSC40" = c(6:10), "MSC50_MACS" = c(2:6), "MSC53" = c(1:3), "MSC57" = c(1:3), "MSC24" = c(1:3), "MSC37" = c(5:9), "MSC39" = c(3:7), "MSC45" = c(1:3), "MSC50_SLO" = c(2:6), "MSC54" = c(1:3), "MSC67" = c(1:3), "MSC68" = c(2:6), "MSC70" = c(1:3))
+opt_clusters_nms <- list("MSC33" = c(6:10),"MSC48" = c(3:7),"MSC49" = c(5:9),"MSC55" = c(4:8),"MSC60" = c(5:9), "MSC66" = c(7:11), "MSC38" = c(2:6), "MSC40" = c(6:10), "MSC50_MACS" = c(2:6), "MSC53" = c(1:3), "MSC57" = c(1:3), "MSC24" = c(1:3), "MSC37" = c(5:9), "MSC39" = c(3:7), "MSC45" = c(1:3), "MSC50_SLO" = c(2:6), "MSC54" = c(1:3), "MSC67" = c(1:3), "MSC68" = c(2:6), "MSC70" = c(1:3))
 
 
 # opt_clusters_nms <- list("MSC33" = c(6:10),"MSC48" = c(3:7),"MSC49" = c(5:9),"MSC55" = c(4:8),"MSC60" = c(5:9))
